# inhibitor

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: build_nix.yml
src/: main.rs
